--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "create-react-class": "^15.6.3",
     "express": "^4.17.1",
     "material-design-icons": "^3.0.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-typeahead": "^3.4.7",
+    "react-day-picker": "^7.4.0",
+    "react-dnd": "5.0.0",
+    "react-dnd-html5-backend": "3.0.2",
     "react-dom": "^16.12.0",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-tag-input": "^6.4.2",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
